5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1671_1880.log
== TEST (2019-04-28 17:44:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())

if(m = 1):
	print("janeiro")
elif(m = 2):
	print ("fevereiro")
elif(m = 3):
	print ("março")
elif(m = 4):
	print("abril")
elif(m = 5):
	print("maio")
elif(m = 6):
	print("junho")
elif(m = 7):
	print("julho")
elif(m = 8):
	print("agosto")
elif(m = 9):
	print("setembro")
elif(m = 10):
	print("outubro")
elif(m = 11):
	print("novembro")
elif(m = 12):
	print("dezembro")
else
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 4
    if(m = 1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:44:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())

if(m == 1):
	print("janeiro")
elif(m == 2):
	print ("fevereiro")
elif(m == 3):
	print ("março")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else
	print("numero de mes invalido")
-- ERROR:
File "XXXX", line 28
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:44:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())

if(m == 1):
	print("janeiro")
elif(m == 2):
	print ("fevereiro")
elif(m == 3):
	print ("março")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:45:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input())

if(m == 1):
	print("janeiro")
elif(m == 2):
	print ("fevereiro")
elif(m == 3):
	print ("março")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.189166
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
